# Smart-Helmet

./: .gitignore  InitialModal4CollitionDetection.ipynb  README.md  Smart-Helmet.ino  SmartBike.ipynb  acceleration_data.csv  generateAccelValues.ipynb  generateAccelWithConfig.ipynb  hehe.csv  helmet.ipynb  model.tflite  model_data.cc  new-Alerts.js  pyproject.toml
testing/: ardino_mega_code.ino  esp32testing.ino
