[tool.poetry]
name = "smart-helmet"
version = "0.1.0"
description = ""
authors = ["Savith Panamgama <geethikasavith@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
